// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Body15SemiBold story 1`] = `
<Text
  style={
    [
      {
        "color": "#081F32",
        "fontSize": 15,
        "fontWeight": "600",
        "letterSpacing": -0.24,
        "lineHeight": 20,
      },
      {
        "fontFamily": undefined,
      },
      undefined,
    ]
  }
  testID="text"
  variant="body15-semibold"
>
  Prueba
</Text>
`;

exports[`renders Body17 story 1`] = `
<Text
  style={
    [
      {
        "color": "#081F32",
        "fontSize": 17,
        "fontWeight": "400",
        "letterSpacing": -0.41,
        "lineHeight": 22,
        "textAlign": "right",
      },
      {
        "fontFamily": undefined,
      },
      undefined,
    ]
  }
  testID="text"
  variant="body17"
>
  Prueba
</Text>
`;

exports[`renders Body17Semibold story 1`] = `
<Text
  style={
    [
      {
        "color": "#081F32",
        "fontSize": 17,
        "fontWeight": "600",
        "letterSpacing": -0.41,
        "lineHeight": 22,
      },
      {
        "fontFamily": undefined,
      },
      undefined,
    ]
  }
  testID="text"
  variant="body17-semibold"
>
  Prueba
</Text>
`;

exports[`renders Body20 story 1`] = `
<Text
  style={
    [
      {
        "color": "#081F32",
        "fontSize": 20,
        "fontWeight": "400",
        "letterSpacing": 0.38,
        "lineHeight": 25,
      },
      {
        "fontFamily": undefined,
      },
      undefined,
    ]
  }
  testID="text"
  variant="body20"
>
  Prueba
</Text>
`;

exports[`renders Body20Bold story 1`] = `
<Text
  style={
    [
      {
        "color": "#081F32",
        "fontSize": 20,
        "fontWeight": "700",
        "letterSpacing": 0.38,
        "lineHeight": 25,
      },
      {
        "fontFamily": undefined,
      },
      undefined,
    ]
  }
  testID="text"
  variant="body20-bold"
>
  Prueba
</Text>
`;

exports[`renders Caption11 story 1`] = `
<Text
  style={
    [
      {
        "color": "#081F32",
        "fontSize": 11,
        "fontWeight": "400",
        "letterSpacing": 0.07,
        "lineHeight": 13,
      },
      {
        "fontFamily": undefined,
      },
      undefined,
    ]
  }
  testID="text"
  variant="caption11"
>
  Prueba
</Text>
`;

exports[`renders Caption13 story 1`] = `
<Text
  style={
    [
      {
        "color": "#081F32",
        "fontSize": 13,
        "fontWeight": "400",
        "letterSpacing": -0.08,
        "lineHeight": 18,
      },
      {
        "fontFamily": undefined,
      },
      undefined,
    ]
  }
  testID="text"
  variant="caption13"
>
  Prueba
</Text>
`;

exports[`renders Headline1 story 1`] = `
<Text
  style={
    [
      {
        "color": "#081F32",
        "fontFamily": "CabinetGrotesk-Medium",
        "fontSize": 40,
        "fontWeight": "700",
        "letterSpacing": 0.41,
        "lineHeight": 48,
      },
      {
        "fontFamily": undefined,
      },
      undefined,
    ]
  }
  testID="text"
  variant="headline1"
>
  Prueba
</Text>
`;

exports[`renders Headline2 story 1`] = `
<Text
  style={
    [
      {
        "color": "#081F32",
        "fontSize": 28,
        "fontWeight": "700",
        "letterSpacing": 0.34,
        "lineHeight": 34,
      },
      {
        "fontFamily": undefined,
      },
      undefined,
    ]
  }
  testID="text"
  variant="headline2"
>
  Prueba
</Text>
`;

exports[`renders Headline3 story 1`] = `
<Text
  style={
    [
      {
        "color": "#081F32",
        "fontSize": 22,
        "fontWeight": "400",
        "letterSpacing": 0.35,
        "lineHeight": 28,
      },
      {
        "fontFamily": undefined,
      },
      undefined,
    ]
  }
  testID="text"
  variant="headline3"
>
  Prueba
</Text>
`;

exports[`renders Headline3Bold story 1`] = `
<Text
  style={
    [
      {
        "color": "#081F32",
        "fontSize": 22,
        "fontWeight": "700",
        "letterSpacing": 0.35,
        "lineHeight": 28,
      },
      {
        "fontFamily": undefined,
      },
      undefined,
    ]
  }
  testID="text"
  variant="headline3-bold"
>
  Prueba
</Text>
`;

exports[`renders LargeTitle story 1`] = `
<Text
  style={
    [
      {
        "color": "#081F32",
        "fontSize": 34,
        "fontWeight": "700",
        "letterSpacing": 0.41,
        "lineHeight": 41,
      },
      {
        "fontFamily": undefined,
      },
      undefined,
    ]
  }
  testID="text"
  variant="large-title"
>
  Prueba
</Text>
`;

exports[`renders Tagline11Tag story 1`] = `
<Text
  style={
    [
      {
        "color": "#081F32",
        "fontSize": 11,
        "fontWeight": "600",
        "letterSpacing": 0.07,
        "lineHeight": 13,
      },
      {
        "fontFamily": undefined,
      },
      undefined,
    ]
  }
  testID="text"
  variant="tagline11-tag"
>
  Prueba
</Text>
`;

exports[`renders Tagline13Tag story 1`] = `
<Text
  style={
    [
      {
        "color": "#5856D6",
        "fontSize": 13,
        "fontWeight": "600",
        "letterSpacing": -0.08,
        "lineHeight": 18,
        "marginTop": -20,
        "textAlign": "center",
      },
      {
        "fontFamily": undefined,
      },
      undefined,
    ]
  }
  testID="text"
  variant="tagline13-tag"
>
  Prueba
</Text>
`;

exports[`renders Tagline15Tag story 1`] = `
<Text
  style={
    [
      {
        "color": "#081F32",
        "fontSize": 15,
        "fontWeight": "600",
        "letterSpacing": -0.24,
        "lineHeight": 20,
        "textAlign": "center",
      },
      {
        "fontFamily": undefined,
      },
      undefined,
    ]
  }
  testID="text"
  variant="tagline15-tag"
>
  Prueba
</Text>
`;
